--- a/template.yaml
+++ b/template.yaml
@@ -267,30 +267,8 @@ Resources:
           Picturegram:
             Type: Api
             Properties:
-              Path: /image/{id}
+              Path: /image/{ownerEmail}
               Method: get
-              Auth:
-                Authorizer: 'NONE'
-
-  DeleteImageLambda:
-    Type: AWS::Serverless::Function
-    Properties:
-        Role: !GetAtt AccessRole.Arn
-        CodeUri: Main
-        Handler: com.nashss.se.picturegram.lambda.DeleteImageLambda::handleRequest
-        Runtime: java11
-        Architectures:
-          - x86_64
-        MemorySize: 512
-        Environment:
-          Variables:
-            JAVA_TOOL_OPTIONS: -XX:+TieredCompilation -XX:TieredStopAtLevel=1
-        Events:
-          Picturegram:
-            Type: Api
-            Properties:
-              Path: /image/{id}
-              Method: delete
               Auth:
                 Authorizer: 'NONE'
 
@@ -303,13 +281,9 @@ Resources:
       AttributeDefinitions:
         - AttributeName: "ownerEmail"
           AttributeType: "S"
-        - AttributeName: "dateTime"
-          AttributeType: "S"
       KeySchema:
         - AttributeName: "ownerEmail"
           KeyType: "HASH"
-        - AttributeName: "dateTime"
-          KeyType: "RANGE"
       BillingMode: "PAY_PER_REQUEST"
       TableName: "image"
 
